--- a/model_assigning_doctor.ipynb
+++ b/model_assigning_doctor.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOpGeasx9cFmL5hIbUsfFmF",
+      "authorship_tag": "ABX9TyNJM9xTCYwPZFXJf7W3ScQC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -196,10 +196,30 @@
         "print(\"Transcribed text:\", transcribed_text)"
       ],
       "metadata": {
-        "id": "dDQVOBR7_tAM"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dDQVOBR7_tAM",
+        "outputId": "50b66898-eb4e-49a2-dabd-fc2d3b005bb0"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.11/dist-packages/whisper/transcribe.py:126: UserWarning: FP16 is not supported on CPU; using FP32 instead\n",
+            "  warnings.warn(\"FP16 is not supported on CPU; using FP32 instead\")\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Transcribed text:  मुझे बुखार है कल से\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -211,10 +231,22 @@
         "\n"
       ],
       "metadata": {
-        "id": "FquPdxDQDU9_"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FquPdxDQDU9_",
+        "outputId": "bff07176-6a1c-4583-ec70-5e804430d2a4"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Translated text: I have fever from tomorrow\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -232,14 +264,26 @@
         "#text = \"The patient is having stress and is depressed.\"\n",
         "\n",
         "#entities = nlp(text)\n",
-        "for ent in entities:\n",
-        "    print(f\"{ent['word']} ({ent['entity_group']}) - Score: {ent['score']:.2f}\")\n"
+        "# for ent in entities:\n",
+        "#     print(f\"{ent['word']} ({ent['entity_group']}) - Score: {ent['score']:.2f}\")\n"
       ],
       "metadata": {
-        "id": "ISdu1rhSobiR"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ISdu1rhSobiR",
+        "outputId": "1ec8c9f9-6875-4703-fd0a-238b0d6a7347"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Device set to use cpu\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -249,10 +293,22 @@
         "print(entities)"
       ],
       "metadata": {
-        "id": "T-UGFv_KFN59"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "T-UGFv_KFN59",
+        "outputId": "cf2243e4-e823-4e35-e700-aec2ea54e568"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[{'entity_group': 'Sign_symptom', 'score': np.float32(0.9999182), 'word': 'fever', 'start': 7, 'end': 12}, {'entity_group': 'Time', 'score': np.float32(0.703359), 'word': 'tomorrow', 'start': 18, 'end': 26}]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -284,7 +340,7 @@
       "metadata": {
         "id": "nsBFy8PZrnTK"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -293,10 +349,29 @@
         "map_to_specialist(entities)"
       ],
       "metadata": {
-        "id": "JItbngbqrzrb"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "JItbngbqrzrb",
+        "outputId": "cf213051-ce00-4486-d76d-46acfb8a5c65"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Pulmonologist'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
     }
   ]
 }
